<resources>
    <string name="app_name">Timer</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_favorite">fa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="colon">:</string>

    <string name="zero">00</string>


    <!--Strings for Settings-->

    <string name="round_len_minute">02</string>
    <string name="round_len_second">00</string>
    <string name="txt_round_length">Round Length</string>

    <string name="rest_time_minute">01</string>
    <string name="rest_time_seconds">00</string>
    <string name="txt_rest_time">Rest Time</string>

    <string name="round_no">05</string>
    <string name="txt_round">Round</string>

    <string name="select_sound">Select Sound</string>
    <string name="options">Options</string>
    <string name="countdown_tone">Countdown Tone</string>
    <string name="select_countdown_tone">Cheerful</string>
    <string name="bell_tone">Bell Tone</string>
    <string name="select_bell_tone">Drum</string>

    <string name="song_list">Cheerful</string>

    <string name="bell">Bell</string>
    <string name="countdown">Countdown</string>
    <string name="volume">Volume</string>

    <string name="app_id">ca-app-pub-7849905563157369~9469335063</string>
    <string name="banner_id">ca-app-pub-7849905563157369/9237755996</string>
    <string name="interstitial_id">ca-app-pub-7849905563157369/1686569038</string>
    <string name="rewarded">ca-app-pub-7849905563157369/2137639955</string>

</resources>
